# visitorlog

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: backport.yml  ci.yml  linter.yml  release.yml  tag-and-promote-from-pr-label.yml
visitor/: hooks.py  patches.txt  test_visitor.py
visitor/api/: badge.py  ocr.py  visitor_scan.py
visitor/ocr_backends/: base.py  id_parsers.py  paddleocr_backend.py  tesseract_backend.py
visitor/patches/v1_0/: add_reports_to_visitors_workspace.py  create_visitor_verifier_role.py
visitor/tests/: test_badge_scan.py  test_ocr.py  test_utils.py
visitor/visitor/dashboard_chart/monthly_visitor_traffic/: monthly_visitor_traffic.json
visitor/visitor/doctype/visitor/: test_visitor.py  visitor.js  visitor.json  visitor.py
visitor/visitor/doctype/visitor_settings/: visitor_settings.json  visitor_settings.py
visitor/visitor/doctype/visitors_registration_card/: test_visitors_registration_card.py  visitors_registration_card.json  visitors_registration_card.py
visitor/visitor/doctype/visitors_registration_log/: test_visitors_registration_log.py  visitors_registration_log.json  visitors_registration_log.py
visitor/visitor/number_card/active_staff_hosts_today/: active_staff_hosts_today.json
visitor/visitor/number_card/active_visitors_on_premise/: active_visitors_on_premise.json
visitor/visitor/number_card/total_visits_today/: total_visits_today.json
visitor/visitor/number_card/unique_visitors_this_month/: unique_visitors_this_month.json
visitor/visitor/report/current_visitors_in_premises/: current_visitors_in_premises.json
visitor/visitor/report/daily_visitor_log/: daily_visitor_log.json
visitor/visitor/report/ocr_exception_report/: ocr_exception_report.json  ocr_exception_report.py
visitor/visitor/report/unique_hosts_today_query/: unique_hosts_today_query.json
visitor/visitor/report/unique_monthly_visitors_query/: unique_monthly_visitors_query.json
(+8 files in other folders)
